[gd_scene load_steps=4 format=2]

[ext_resource path="res://WorldRelated/WorldSlices/Stage_Special001/Level04/CustomGameFrontHUDControls/WSSS0104_BannedHotkeyPanel.gd" type="Script" id=1]
[ext_resource path="res://MiscRelated/VisualsRelated/MousePressVisual/MousePressVisual_Img.png" type="Texture" id=2]
[ext_resource path="res://WorldRelated/WorldSlices/Stage_Special001/Level04/CustomGameFrontHUDControls/Assets/WSSS0104_PanelBackground.png" type="Texture" id=3]

[node name="WSSS0104_BannedHotkeyPanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="CenterMarginer" type="MarginContainer" parent="."]
margin_right = 96.0
margin_bottom = 82.0
mouse_filter = 2
size_flags_horizontal = 6

[node name="Background" type="TextureRect" parent="CenterMarginer"]
modulate = Color( 1, 1, 1, 0.14902 )
margin_right = 96.0
margin_bottom = 82.0
mouse_filter = 2
texture = ExtResource( 3 )
stretch_mode = 1

[node name="Marginer" type="MarginContainer" parent="CenterMarginer"]
margin_right = 96.0
margin_bottom = 82.0
mouse_filter = 2
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="CenterMarginer/Marginer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 84.0
margin_bottom = 70.0
custom_constants/separation = 8

[node name="DisabledLabel" type="Label" parent="CenterMarginer/Marginer/VBoxContainer"]
margin_right = 72.0
margin_bottom = 15.0
size_flags_horizontal = 6
text = "Disabled"
align = 1

[node name="BoxContainer" type="HBoxContainer" parent="CenterMarginer/Marginer/VBoxContainer"]
margin_left = 15.0
margin_top = 23.0
margin_right = 56.0
margin_bottom = 58.0
size_flags_horizontal = 6
custom_constants/separation = 20

[node name="MousePressTextureRect" type="TextureRect" parent="CenterMarginer/Marginer/VBoxContainer/BoxContainer"]
margin_right = 21.0
margin_bottom = 35.0
size_flags_horizontal = 6
texture = ExtResource( 2 )

[node name="VKPContainer" type="HBoxContainer" parent="CenterMarginer/Marginer/VBoxContainer/BoxContainer"]
margin_left = 41.0
margin_right = 41.0
margin_bottom = 35.0
mouse_filter = 2
size_flags_horizontal = 6
custom_constants/separation = 10
